src/objects/netsuite_conn__Product_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Flow_Select_Field__c</fullName>
        <label>Flow Select Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Inventory_Item__c</fullName>
        <label>Inventory Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Inventory_Lot_Numbered__c</fullName>
        <label>Inventory Lot Numbered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Inventory_Serialized__c</fullName>
        <label>Inventory Serialized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Non_Inventory_Purchase__c</fullName>
        <label>Non Inventory Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Non_Inventory_ReSale__c</fullName>
        <label>Non Inventory ReSale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Non_Inventory_Sale__c</fullName>
        <label>Non Inventory Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Service_Purchase__c</fullName>
        <label>Service Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Service_ReSale__c</fullName>
        <label>Service ReSale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Service_Sale__c</fullName>
        <label>Service Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Sync Settings</label>
</CustomObject>